$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-12-15 [B] Fixed memberlist issue when database name contains a dash (thread ID 68843) {eenemeenemuu}
2010-12-14 [B] Fixed custom thumbnail for files with uppercase extension (thread ID 68809) {eenemeenemuu}
2010-12-12 [O] Updated Portuguese language file (user contribution) {eenemeenemuu}
2010-12-12 [B] Fixed function 'utf_replace' (thread ID 68753) {eenemeenemuu}
2010-12-12 [C] Fixed indent for subcategories (thread ID 68764) {eenemeenemuu}
2010-12-09 [B] Fixed film strip issue (thread ID 68585) {eenemeenemuu}
2010-11-30 [M] Counted version count up in SVN repository from cpg1.5.10 to cpg1.5.11 {eenemeenemuu}
2010-11-30 [M] Release of cpg1.5.10 {eenemeenemuu}
2010-11-30 [B] Fixed issue with language manager (thread ID 68309) {eenemeenemuu}
2010-11-27 [S] Fixed potential security issue during installation (thread ID 68285) {eenemeenemuu}
2010-11-25 [A] Added missing/new plugin hooks to visiblehookpoints plugin {eenemeenemuu}
2010-11-24 [O] Always use PHP time when querying the database (thread ID 67015) {eenemeenemuu}
2010-11-22 [B] No error message for admin during upload if image dimension exceeds configuration value (thread ID 68240) {eenemeenemuu}
2010-11-22 [A] Added plugin hook 'replace_forbidden_conditions' (thread ID 67987) {eenemeenemuu}
2010-11-22 [C] Theme 'curve': remove drop-down menu leftover if empty (thread ID 68243) {eenemeenemuu}
2010-11-20 [B] Fixed use of intermediate-sized image (thread ID 67894) {eenemeenemuu}
2010-11-19 [A] Display more batch add error messages {Nibbler}